<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProjectSubmission">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            android:theme="@style/AppTheme.AppBarOverlay">
            <Toolbar
                android:id="@+id/submission_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:navigationIcon="?attr/homeAsUpIndicator">
                <include layout="@layout/tool_bar_layout" />
            </Toolbar>

        </com.google.android.material.appbar.AppBarLayout>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/AppTheme.Submit">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="24dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/edit_text"
            android:hint="@string/first_name"
            android:padding="@dimen/padding_editText"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="6dp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="6dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edit_text"
            android:hint="@string/last_name"
            android:padding="@dimen/padding_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="24dp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edit_text"
            android:hint="@string/email_address"
            android:padding="@dimen/padding_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstName" />



        <EditText
            android:id="@+id/githubLink"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edit_text"
            android:hint="@string/project_on_github_link"
            android:padding="@dimen/padding_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subButton"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/color_Secondary"
            android:text="@string/submit"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="25dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/githubLink"
            app:layout_constraintStart_toStartOf="@+id/githubLink"
            app:layout_constraintTop_toBottomOf="@+id/githubLink" />


        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyle"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint = "@color/color_Secondary"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/subButton"
            app:layout_constraintEnd_toEndOf="@+id/subButton"
            app:layout_constraintTop_toBottomOf="@+id/subButton"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50121653" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>